# budgie-applet

./: README.md  meson.build
src/: meson.build
src/cpu-temp/: CpuTempApplet.plugin  CpuTempApplet.vala  CpuTempSensor.vala  CpuTempSetting.vala  hello.dcsms.applet.cputemp.gschema.xml  meson.build
